--- a/_posts/2018-02-09-OpenGL学习笔记.md
+++ b/_posts/2018-02-09-OpenGL学习笔记.md
@@ -1,15 +1,17 @@
 ---
 layout: post
-title: template page
-categories: [cate1, cate2]
-description: some word here
-keywords: keyword1, keyword2
+title: （一）OpenGL学习笔记
+categories: [OpenGL]
+description: 学习 OpenGL Programming Guide
+keywords: OpenGL
 ---
 
 
 ### 2018-2-9
 
-## 初始OpenGL
+## （1）OpenGL学习笔记-概述
+
+
 OpenGL是一种应用程序编程接口（Application Programming Interface, API），它是一种可以对图形硬件设备特性进行访问的软件库。
 
 OpenGL中会用到四种不同的着色阶段（shader stage）。其中最常用的包括顶点着色器（vertex shader）以及片元着色器（fragment shader），前者用于处理顶点数据，后者用于处理光栅化后的片元数据。
