--- a/_posts/2018-02-10-游戏开发相关文章集合.md
+++ b/_posts/2018-02-10-游戏开发相关文章集合.md
@@ -10,7 +10,8 @@ keywords: GAME
 # 游戏相关文章（集合）
 
 ---
+2/10/2018 
 
- - [游戏开发相关文章][1]
+ - [AI分享站：核心游戏系统架构设计][1]
 
 [1]: http://www.aisharing.com/archives/769
