--- a/_posts/2018-02-11-面试题.md
+++ b/_posts/2018-02-11-面试题.md
@@ -1,7 +1,7 @@
 **第一题：下列程序的输出是多少？**
 
     #include<stdio.h>
-    
+
     int main()
     {
     	unsigned char i = 7;
@@ -24,13 +24,13 @@
 - 下次i=-2时，内存中-2的二进制表示为 1111 1110，但是按照unsigned int来解读就是254
 - 这时i=254，再参与计算254/3=84次。然后余254%3=2，再参与计算一次，2-3=-1
 - 下次i=-1时，内存中-1的二进制表示为 1111 1111，但是按照unsigned int来解读就是255
-- 这时i=255，再参与计算255/3=85次。然后余255%3=0，不满足条件继续，for循环结束
+- 这时i=255，再参与计算255/3=85次。然后余255%3=0，0的有符号和无符号都是0， 0不满足条件继续，for循环结束
 - 所以最后把次数加起来3+84+1+85=173次
-   
+
 扩展：
 
 - 如果把代码换成以下代码，结果就是3了，因为把 i 转成有符号类型int了
-    
+
     	for (int m = i; m >0; m -= 3)
     	{
     		++j;
@@ -56,61 +56,61 @@
     int main()
     {
     	int a[5] = { 1, 2, 3, 4, 5 };
-    
+
 		//依次数组内存地址
 		printf("\[0\] : %u\n", a);
 		printf("\[1\] : %u\n", a + 1);
 		printf("\[2\] : %u\n", a + 2);
 		printf("\[3\] : %u\n", a + 3);
 		printf("\[4\] : %u\n\n", a + 4);
-	
+
 		//数组内存地址打印完，再+1打印
 		printf("\[5\] Next : %u\n", a + 5);
-	
+
 		printf("\(int\*\)\&a : %u\n\n", (int*)&a);
-	
+
 		int *ptr = (int*)(&a + 1);
 		//把&a + 1强转后的指针地址打印出来
 		printf("\(int\*\)\(\&a \+ 1\) : %u\n\n", ptr);
-	
+
 		//结果
 		printf("%d, %d\n", *(a + 1), *(ptr - 1));
     }
-	
+
 	打印的结果：
 	a : 4126780
-	
+
 	[0] : 4126780
 	[1] : 4126784
 	[2] : 4126788
 	[3] : 4126792
 	[4] : 4126796
-	
+
 	[4] Next : 4126800
 	(int*)&a : 4126780
-	
+
 	(int*)(&a + 1) : 4126800
-	
+
 	2, 5
 
 2、可以看出来
 
 - a 和 a[0] 还有 (int*)&a 是同一个地址
 - [4] Next 和 (int*)(&a + 1) 是同一个地址
-- 所以，&a+1 是取整个变量数组a的地址，然后加四个字节
+- 所以，&a+1 是取整个变量数组a的地址，是数组最后一个元素的地址然后加四个字节
 
 ---
 **第三题：下列程序目标是申请一块内存，并将地址赋值给p， 请问是否有错误，如果有，请改正**
 
     #define SIZE 100
     int my_malloc（int *q)
-    
+
     void main()
     {
     	int *p;
     	my_malloc(p);
     }
-    
+
     int my_malloc(int *q)
     {
     	q = (int *)malloc(SIZE*sizeof(int));
@@ -123,12 +123,12 @@
 
     #define SIZE 100
     int * my_malloc();
-    
+
     int main()
     {
     	int *p = my_malloc();
     }
-    
+
     int* my_malloc()
     {
     	int* q = (int *)malloc(SIZE * sizeof(int));
@@ -137,4 +137,5 @@
 
 ---
 第四题：给定两个链表（相交），找到第一个公共节点，请写出代码
+
 参考编程之美：题目3
