--- a/_posts/2019-03-16-学习-记录.md
+++ b/_posts/2019-03-16-学习-记录.md
@@ -7,83 +7,82 @@ keywords: 学习、心得
 ---
 
 
-------------
+------
 
-smilehao
-U3D games programmer
-shenzhen
-https://www.tencent.com
-703016035@qq.com
-https://github.com/smilehao
-Unity3D游戏轻量级xlua热修复框架
-https://www.cnblogs.com/sanyejun/p/7906313.html
-
-------------
-
-TaoOneOne
-https://github.com/TaoOneOne/xLua_FairyGui_Demo
-https://github.com/TaoOneOne
+> * smilehao
+> * U3D games programmer
+> * shenzhen
+> * https://www.tencent.com
+> * 703016035@qq.com
+> * https://github.com/smilehao
+> * Unity3D游戏轻量级xlua热修复框架
+> * https://www.cnblogs.com/sanyejun/p/7906313.html
 
 ------------
 
-
-AdamWu
-Kingnet
-Shanghai,China 
-https://github.com/AdamWu
-
-An open-source, cross-platform 3D native C++ game framework
-making it easy to learn and write mobile and desktop games.
- http://www.gameplay3d.org
+> * TaoOneOne
+> * https://github.com/TaoOneOne/xLua_FairyGui_Demo
+> * https://github.com/TaoOneOne
 
 ------------
 
 
-Sam-Cen 
-专注于app底层/架构/算法/业务工作流程，记录进步的足迹和感悟。
-https://me.csdn.net/Blues1021
+> * AdamWu
+> * Kingnet
+> * Shanghai,China 
+> * https://github.com/AdamWu
+
+> * An open-source, cross-platform 3D native C++ game framework
+> * making it easy to learn and write mobile and desktop games.
+> * http://www.gameplay3d.org
 
 ------------
 
 
-gameplay3d 
-GamePlay is an free, open-source, cross-platform, 2D/3D game framework.
-https://github.com/gameplay3d
+> * Sam-Cen 
+> * 专注于app底层/架构/算法/业务工作流程，记录进步的足迹和感悟。
+> * https://me.csdn.net/Blues1021
 
 ------------
 
 
-A list of Game Development resources to make magic happen. 
-https://github.com/ellisonleao/magictools
+> * gameplay3d 
+> * GamePlay is an free, open-source, cross-platform, 2D/3D game framework.
+> * https://github.com/gameplay3d
 
 ------------
 
 
-Mark.II
-U3DC
-Talk is cheap, show me the code!
-http://www.u3dc.com
+> * A list of Game Development resources to make magic happen. 
+> * https://github.com/ellisonleao/magictools
 
 ------------
 
 
-Unity BITBUCKET
-https://bitbucket.org/account/user/Unity-Technologies/projects/PROJ
+> * Mark.II
+> * U3DC
+> * Talk is cheap, show me the code!
+> * http://www.u3dc.com
 
 ------------
 
 
-WuXiongBin
-中国 广州 
-qewsfs@qq.com
-https://github.com/wuxiongbin?tab=repositories
-
-uHyperText
-扩展uGUI，支持富文本解析，动画表情以及位移动画等功能
-此插件扩展了uGUI Text的富文本格式，支持uGUI的富文本格式的基础上，还增加了以下独有的格式:
+> * Unity BITBUCKET
+> * https://bitbucket.org/account/user/Unity-Technologies/projects/PROJ
 
 ------------
 
 
-2D Game Kit
-https://assetstore.unity.com/packages/essentials/tutorial-projects/2d-game-kit-107098
+> * WuXiongBin
+> * 中国 广州 
+> * qewsfs@qq.com
+> * https://github.com/wuxiongbin?tab=repositories
+> * uHyperText
+> * 扩展uGUI，支持富文本解析，动画表情以及位移动画等功能
+> * 此插件扩展了uGUI Text的富文本格式，支持uGUI的富文本格式的基础上，还增加了以下独有的格式:
+
+------------
+
+
+> * 2D Game Kit
+> * https://assetstore.unity.com/packages/essentials/tutorial-projects/2d-game-kit-107098
