--- a/_posts/2019-04-12-Unity UI强制引导框.md
+++ b/_posts/2019-04-12-Unity UI强制引导框.md
@@ -1,7 +1,7 @@
 ## **Unity UI强制引导框**
 
 **效果：**
-![在这里插入图片描述](https://github.com/asyncrun/GuideMask/blob/master/gif/GuideMask.gif)
+![在这里插入图片描述](https://img-blog.csdnimg.cn/2019041222194859.gif)
 **主要代码：**
 
 ```c
