--- a/_posts/2019-03-30-计时器.md
+++ b/_posts/2019-03-30-计时器.md
@@ -1,12 +1,13 @@
 ---
 layout: post
-categories : [Unity]
-tags : [计时器]]
-excerpt: 实用计时器
+categories : [笔记]
+tags : [笔记]
+excerpt: 笔记
 ---
 
-# [**Proven Unity Timer**][2] 
 
+
+# [**Proven Unity Timer**][2] 
 
 ---
 
