--- a/_posts/2019-04-12-UI强制引导框.md
+++ b/_posts/2019-04-12-UI强制引导框.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-categories : [Unity]
-tags : [UI]]
-excerpt: UI强制引导框
+categories : [笔记]
+tags : [笔记]
+excerpt: 笔记
 ---
+
+
 
 ## **Unity UI强制引导框**
 
